Bug 103143 - FILEOPEN During .docx open number of characters are not imported correctly
Summary: FILEOPEN During .docx open number of characters are not imported correctly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.2.2 release
Hardware: All All
: medium minor
Assignee: Bartosz
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-12 04:42 UTC by Bartosz
Modified: 2016-10-16 21:38 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bartosz 2016-10-12 04:42:29 UTC
During importing .docx document where statistical data are saved, the number of characters are not imported correctly. 
1. Characters with spaced are not imported at all
2. NonWhitespaceCharacterCount is switched with all characters with spaced count
Comment 1 Bartosz 2016-10-12 04:46:50 UTC
Review:
https://gerrit.libreoffice.org/#/c/29721/
Comment 2 Commit Notification 2016-10-13 19:06:00 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7d5d5e6e9b67807560a7db4123e8b41cc0f70a32

tdf#103143 Fix importing number of characters from docx files

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.