tdf#103143 Fix importing number of characters from docx files

Change-Id: I45429626f7299f84fda2969dd6000c8aa8d23982
Reviewed-on: https://gerrit.libreoffice.org/29721
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>